--- a/src/components/UserMenu/user-menu.module.css
+++ b/src/components/UserMenu/user-menu.module.css
@@ -1,25 +1,24 @@
-.list {
-  list-style: none;
-  padding: 0;
-  margin: 20px 0 0 0;
-}
-
-.item {
+.wrapper {
   display: flex;
-  font-size: 24px;
-  gap: 15px;
+  align-items: center;
+  gap: 20px;
 }
 
-.item:not(:last-child) {
-  margin-bottom: 5px;
+.text {
+  font-size: 16px;
+  font-weight: bold;
+  text-decoration: none;
+  color: #333;
 }
 
 .button {
   background-color: #fa8b78;
-  color: white;
+  color: #333;
   border: none;
   border-radius: 5px;
-  font-size: 16px;
+  font-size: 12px;
+  font-weight: 600;
+  height: 30px;
   padding: 8px 16px;
   text-align: center;
   text-decoration: none;
